# pycountsmal

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  testnb.ipynb
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycountsmal/: __init__.py  plotting.py
tests/: test_pycountsmal.py
