[tool.poetry]
name = "pycountsmal"
version = "0.1.0"
description = "Calculate word counts in a fle"
authors = ["Mark LeBoeuf"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
